<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobOffer"
    android:id="@+id/job_offer_activity_id">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jo2mmbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Main Menu" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/jo_add_another_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+ job offer"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/job_offer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Job Offer"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Title:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Company:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_company_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input company" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="City:"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/jo_city_text"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Name" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="State:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_state_text"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Living Cost Index:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_living_cost_index_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input living cost index" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Commute Time (hour) :"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_commute_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input commute time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Salary ($):"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_yearly_salary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input yearly salary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Bonus ($):"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_yearly_bonus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input yearly bonus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Retirement Benefits (%):"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_retirement_benefits_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input retirement benefits" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Leave Time (day):"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jo_leave_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="input leave time" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/jo_cancel_btn"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/jo_save_btn"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:text="Save" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/jo_compare_cj_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Compare with Current Job" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>