...
                android:layout_weight="1"
                android:text="Job ID"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/occ_id_1_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/occ_id_2_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>
...
                android:layout_weight="1"
                android:text="Title"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/occ_title_1_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/occ_title_2_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>
...
                android:layout_weight="1"
                android:text="Company"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/occ_company_1_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/occ_company_2_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>
...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/back2jo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Back to Job Offer" />

            <Space
...
