...
            <Space
                android:layout_width="24dp"
                android:layout_height="52dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnJobComparison"
                android:layout_width="209dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Job Comparison" />

            <Space
...
